cabal-version: 2.2

name:           kmonad
category:       Application
version:        0.4.1
synopsis:       Advanced keyboard remapping utility
author:         David Janssen
maintainer:     janssen.dhj@gmail.com
license:        MIT
license-file:   LICENSE
build-type:     Simple
description:
  KMonad is a cross-platform command-line utility that runs as a daemon. It
  captures keyboard input (exactly how depends on the OS) and remaps it. The
  mapping is highly configurable, and provides options like (transparent) layer
  overlays, tap-mod buttons, multi-tap buttons, leader-key style buttons, and
  keyboard macros. Functionality heavily inspired by the QMK-firmware.

extra-source-files:
    changelog.md

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Wno-unused-imports
  build-depends:
      base
    , cereal
    , contravariant
    , lens
    , megaparsec
    , mtl
    , optparse-applicative
    , resourcet
    , rio
    , time
    , unliftio
  default-extensions:
      ConstraintKinds
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NoImplicitPrelude
      OverloadedStrings
      RankNTypes
      TemplateHaskell
      TupleSections
      TypeFamilies

  exposed-modules:
      Data.LayerStack
      Data.MultiMap
      System.Keyboard
      System.Keyboard.Keycode
      System.Keyboard.IO
      System.Keyboard.Types
      KMonad.Action
      KMonad.App
      KMonad.App.BEnv
      KMonad.App.Dispatch
      KMonad.App.Hooks
      KMonad.App.Keymap
      KMonad.App.Sluice
      KMonad.Args
      KMonad.Args.Cmd
      KMonad.Args.Parser
      KMonad.Args.Joiner
      KMonad.Args.Types
      KMonad.Button
      KMonad.Layer
      KMonad.Parser.Keyboard.ComposeSeq
      KMonad.Prelude
      KMonad.Util

  if os(linux)
    exposed-modules:
      System.Keyboard.Linux.Keycode
      System.Keyboard.Linux.Types
      System.Keyboard.Linux.IO.DeviceSource
      System.Keyboard.Linux.IO.UinputSink
    c-sources:
      c_src/keyio.c
    build-depends:
      unix

  if os(windows)
    exposed-modules:
      System.Keyboard.Windows.Keycode
      System.Keyboard.Windows.Types
      System.Keyboard.Windows.IO.LowLevelHookSource
      System.Keyboard.Windows.IO.SendEventSink
    c-sources:
      c_src/keyio_win.c
    build-depends:
      Win32

  if os(darwin)
    exposed-modules:
      System.Keyboard.IO.Mac.IOKitSource
      System.Keyboard.IO.Mac.KextSink
      System.Keyboard.IO.Mac.Types
    cxx-sources:
      c_src/mac/keyio_mac.cpp
    cxx-options:
      -std=c++14
    -- Commenting out, interferes with Hackage
    -- include-dirs:
    --   c_src/mac/Karabiner-VirtualHIDDevice/dist/include
    extra-libraries:
      c++
    build-depends:
      unix
    frameworks:
      CoreFoundation
      IOKit

executable kmonad
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
  main-is:
      Main.hs
  default-language:
      Haskell2010
  hs-source-dirs:
      app
  build-depends:
      base
    , kmonad
